# blockybuildy

./: .gitignore  Cargo.toml  README.md  out.txt  out3.txt  out4.txt
benches/: benchmark.rs
proptest-regressions/sim/: grip_set.txt  layer_mask.txt
src/: lib.rs  macros.rs  main.rs  mc4d.rs  stackvec.rs
src/search/: dfs.rs  heuristic.rs  meta.rs  mod.rs  params.rs  segment.rs
src/search2/: mod.rs
src/sim/: all_pieces.rs  elements.rs  grip_set.rs  grips.rs  group.rs  layer_mask.rs  mod.rs  ops.rs  puzzle.rs  puzzle_state.rs  space.rs  state.rs  twists.rs
src/sim/blockbuilding/: block.rs  layer_mask.rs  mod.rs  piece.rs  state.rs
src/sim/common/: elements.rs  grip_set.rs  grips.rs  mod.rs  twists.rs
